# word_type_rust

./: Cargo.toml  README.md
src/: state.rs
